[tool.poetry]
name = "knockknock"
version = "0.1.0"
description = ""
authors = ["Matt Ball <matt.ball.2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
functions-framework = "^3.5.0"
google-cloud-pubsub = "^2.21.1"
requests = "^2.31.0"
google-nest-sdm = "^4.0.4"
aiortc = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
